--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,7 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background: url("/img/background.png");
 }
 
 a {
@@ -13,4 +14,46 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+.navbar {
+  opacity: 0.95;
+}
+
+.modal.left .modal-header {
+  background-color: #60739a;
+  color: white;
+  height: 50px;
+  padding-left: 10px;
+  padding-right: 10px;
+  justify-items: center;
+  align-content: space-between;
+}
+
+.menu-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-right: 10px;
+  padding-left: 10px;
+  height: 50px;
+  background-color: #60739a;
+  color: white;
+  padding-top: 0;
+  margin-top: 0;
+}
+
+.modal.left .modal-dialog {
+  height: calc(100vh - 0.2%);
+  margin-top: 0.1%;
+  margin-bottom: 0.1%;
+  padding: 0;
+  left: 0;
+  margin-left: 2px;
+  transition: opacity 0.3s linear, left 0.3s ease-out;
+}
+
+.modal.left .modal-dialog .modal-content {
+  height: auto;
+  min-height: calc(100% - 0.2%);
 }
