--- a/components/header/styles.module.scss
+++ b/components/header/styles.module.scss
@@ -18,7 +18,7 @@
         }
 
         &:first-letter {
-            color: #0053ff;
+            color: #ff0000;
             font-weight: bold;
         }
     }
