--- a/components/card/styles.module.scss
+++ b/components/card/styles.module.scss
@@ -1,28 +1,35 @@
 .card {
-    display: flex;
-    align-items: flex-start;
-    justify-content: space-between;
+    //display: flex;
+    //align-items: flex-start;
+    //justify-content: space-between;
+    //flex-direction: column;
+    display: inline-grid;
     background-color: #ffffff;
     width: 100%;
+    height: 100%;
     border-radius: 8px;
-    box-shadow: 1px 3px rgba(0, 0, 0, 0.11);
+    box-shadow: 0 1px 1px rgba(0,0,0,0.30), 0 1px 1px rgba(0,0,0,0.22);
 
     &:hover {
-        box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.46);
+        box-shadow: 0 5px 5px rgba(0,0,0,0.30), 0 5px 5px rgba(0,0,0,0.22);
     }
 
     .header {
-        margin: 8px;
+        //margin: 8px;
+        padding: 6px;
         display: flex;
         align-items: center;
         justify-content: space-between;
-        width: 100%;
-        padding: 10px;
-        min-height: 50px;
+        min-height: 20px;
         border-bottom: 1px solid rgba(0, 0, 0, 0.14);
     }
 
     .body {
-        min-height: 100px;
+        display: flex;
+        align-items: flex-start;
+        justify-content: center;
+        height: 100%;
+        //min-height: 100px;
+        width: auto;
     }
 }
