--- a/components/header/styles.module.scss
+++ b/components/header/styles.module.scss
@@ -1,4 +1,7 @@
 .container {
+    position: fixed;
+    top: 0;
+    width: 100%;
     display: flex;
     align-items: flex-start;
     justify-content: space-between;
@@ -9,9 +12,14 @@
     padding-left: 10px;
     border-bottom: 1px solid rgba(255, 255, 255, 0.08);
 
+    .flex {
+        display: flex;
+        padding: 3px;
+    }
+
     .logo {
         font-size: 24px;
-        padding: 4px;
+        margin-bottom: 0;
 
         &:hover {
             cursor: pointer;
@@ -25,5 +33,11 @@
 
     .menuButton {
         border: none;
+        margin-right: 4px;
+
+        &:hover {
+            background-color: #343952;
+            color: white;
+        }
     }
 }
