Alterado cores e posicionamentos

--- a/components/header/styles.module.scss
+++ b/components/header/styles.module.scss
@@ -5,7 +5,7 @@
     display: flex;
     align-items: flex-start;
     justify-content: space-between;
-    background-color: #272B41;
+    background-color: rgb(39, 43, 65);
     color: white;
     height: 50px;
     padding-right: 10px;
