--- a/components/page/styles.module.scss
+++ b/components/page/styles.module.scss
@@ -35,6 +35,7 @@
     min-height: 30px;
     background-color: white;
     color: rgb(111, 111, 111);
+    opacity: 0.8;
 
     img {
       padding-left: 8px;
