--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -2,9 +2,14 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  /*background: url("/img/background.png");*/
+  font-family: "Inter", sans-serif;
+  font-size: 14px;
+  font-variant: tabular-nums;
+  line-height: 1.57;
+  background-color: #fff;
+  color: #272B41;
+  overflow-x: hidden;
+  min-height: 100%;
 }
 
 a {
