Ajustado tamanho do h1

--- a/pages/login/styles.module.scss
+++ b/pages/login/styles.module.scss
@@ -6,6 +6,10 @@
   height: 100vh;
   justify-content: space-between;
 
+  h1 {
+    font-size: 28px;
+  }
+
   .background {
     display: flex;
     align-items: center;
