--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -8,7 +8,7 @@ body {
   font-size: 14px;
   font-variant: tabular-nums;
   line-height: 1.57;
-  color: #272B41;
+  color: #272b41;
   overflow-x: hidden;
   min-height: 100%;
   background-color: #f5f5f5;
@@ -71,7 +71,6 @@ a {
   }
 }
 
-
 .flex {
   display: flex;
   align-items: center;
@@ -89,28 +88,46 @@ a {
 }
 
 @-webkit-keyframes loading {
-  0%{background-position:0% 51%}
-  50%{background-position:100% 50%}
-  100%{background-position:0% 51%}
+  0% {
+    background-position: 0% 51%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 51%;
+  }
 }
 @-moz-keyframes loading {
-  0%{background-position:0% 51%}
-  50%{background-position:100% 50%}
-  100%{background-position:0% 51%}
+  0% {
+    background-position: 0% 51%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 51%;
+  }
 }
 @-o-keyframes loading {
-  0%{background-position:0% 51%}
-  50%{background-position:100% 50%}
-  100%{background-position:0% 51%}
+  0% {
+    background-position: 0% 51%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 51%;
+  }
 }
 @keyframes loading {
   0% {
-    background-position: 0% 51%
+    background-position: 0% 51%;
   }
   50% {
-    background-position: 100% 50%
+    background-position: 100% 50%;
   }
   100% {
-    background-position: 0% 51%
+    background-position: 0% 51%;
   }
 }
