Corrigido formGroup em usuários

--- a/pages/usuarios/styles.module.scss
+++ b/pages/usuarios/styles.module.scss
@@ -30,7 +30,7 @@
     padding-left: 50px;
     padding-right: 50px;
 
-    .form-group {
+    .formGroup {
       width: 100%;
       padding-bottom: 20px;
     }
